# cookiecutter-pypackage

./: README.md  cookiecutter.json  settings.ini  setup.cfg  setup.py
docs/source/: conf.py  index.rst
