[bumpversion]
current_version = 0.5.10
commit = True
tag = True

[metadata]
description-file = README.md

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[yapf]
indent_width = 2
spaces_around_default_or_named_assign = false
split_before_first_argument = true
split_before_expression_after_opening_paren = true

[flake8]
max-line-length = 80
ignore = F403,F405,E731
indent-size = 2

[isort]
profile = django
lines_between_types = 1
lines_after_imports = 2
